--- a/Car.html
+++ b/Car.html
@@ -52,19 +52,19 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="innova.html" class="car_img_content_link">
+                            <a href="dmax.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Toyota Innova">
+                                    <img src="https://img2.pic.in.th/pic/20cf5e809eb225b6c6dfe7333a34e36f.jpg" alt="Isuzu Dmax">
                                 </figure>
                             </a>
                         </div>
                         <div>
-                            <p class="car_name">Toyota</p>
+                            <p class="car_name">Isuzu</p>
                             <div class="car_price_container">
-                                <a href="innova.html" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Innova</h2>
+                                <a href="dmax.html" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Dmax</h2>
                                 </a>
-                                <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
+                                <p class="car_price">900฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
@@ -72,18 +72,18 @@
                         <ul class="car_list_characteristics">
                             <li>
                                 <i class="fa-solid fa-gears"></i>
-                                <span title="Manual">automatic</span>
+                                <span title="Manual">Manual</span>
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                <span title="Kilometraje ilimitado">Diesel</span>
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
-                                <span title="5">7</span>
+                                <span title="5">5</span>
                             </li>
                             <li>
-                                <a href="innova.html">
+                                <a href="dmax.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
@@ -186,7 +186,7 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                                <span title="Kilometraje ilimitado">Gasohal 91</span>
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="altis.html" class="car_img_content_link">
+                            <a href="altisT1.html" class="car_img_content_link">
                                 <figure class="car_img_content">
                                     <img src="https://img2.pic.in.th/pic/136a8151d1fb889f802de0acfce4e71f.jpg" alt="Toyota Altis">
                                 </figure>
@@ -226,7 +226,7 @@
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="altis.html" class="car_model_link">
+                                <a href="altisT1.html" class="car_model_link">
                                     <h2 class="car_model" title="SENTRA">Altis</h2>
                                 </a>
                                 <p class="car_price">1100฿ <span class="car_price_time">/day</span></p>
@@ -248,7 +248,117 @@
                                 <span title="5">5</span>
                             </li>
                             <li>
-                                <a href="altis.html">
+                                <a href="altisT1.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="altisT2.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img5.pic.in.th/file/secure-sv1/b2f96bca70e9e8fadef5a7a704162daa.jpg" alt="Toyota Altis">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="altisT2.html" class="car_model_link">
+                                    <h2 class="car_model" title="SENTRA">Altis</h2>
+                                </a>
+                                <p class="car_price">1200฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="altisT2.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="altisK.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img5.pic.in.th/file/secure-sv1/ba46d9bcb0c7ba5ba8ba8fa7a5eac6ea.jpg" alt="Toyota Altis">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="altisK.html" class="car_model_link">
+                                    <h2 class="car_model" title="SENTRA">Altis</h2>
+                                </a>
+                                <p class="car_price">1100฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="altisK.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
@@ -272,7 +382,7 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="vios.html" class="car_img_content_link">
+                            <a href="viosT.html" class="car_img_content_link">
                                 <figure class="car_img_content">
                                     <img src="https://img5.pic.in.th/file/secure-sv1/baa38aaf1539d328be0e96c3c51a657c.jpg" alt="Toyota Vios">
                                 </figure>
@@ -281,10 +391,65 @@
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="vios.html" class="car_model_link">
+                                <a href="viosT.html" class="car_model_link">
                                     <h2 class="car_model" title="FORTE">Vios</h2>
                                 </a>
                                 <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 91</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="viosT.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="viosW.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img5.pic.in.th/file/secure-sv1/6474087718dc5474913b90bea46227a5.jpg" alt="Toyota Vios">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="viosW.html" class="car_model_link">
+                                    <h2 class="car_model" title="SENTRA">Vios</h2>
+                                </a>
+                                <p class="car_price">1200฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
@@ -303,7 +468,62 @@
                                 <span title="5">5</span>
                             </li>
                             <li>
-                                <a href="vios.html">
+                                <a href="viosW.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="camry.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img2.pic.in.th/pic/a3f37d081484f92dff36aa42796ce97d.jpg" alt="Toyota Camry">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="camry.html" class="car_model_link">
+                                    <h2 class="car_model" title="SENTRA">Camry</h2>
+                                </a>
+                                <p class="car_price">1400฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">automatic</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="camry.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
