--- a/Car.html
+++ b/Car.html
@@ -95,8 +95,8 @@
                 <article class="card_ui">
                     <div class="car_header">
                         <div class="car_header_status">
-                            <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                            <div class="status_disponibility status_not_available">
+                                <span>No Disponible</span>
                             </div>
                         </div>
                         <div>
@@ -480,8 +480,8 @@
                 <article class="card_ui">
                     <div class="car_header">
                         <div class="car_header_status">
-                            <div class="status_disponibility status_available">
-                                <span>Disponible</span>
+                            <div class="status_disponibility status_not_available">
+                                <span>No Disponible</span>
                             </div>
                         </div>
                         <div>
