--- a/camry.html
+++ b/camry.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>altis</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <link rel="stylesheet" href="camry.css">
+    <link rel="stylesheet" href="productdetails.css">
     <link rel="stylesheet" href="swiper.min.css">
 </head>
 <body>
