--- a/Car1.html
+++ b/Car1.html
@@ -52,19 +52,19 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="dmax.html" class="car_img_content_link">
+                            <a href="viosB.html" class="car_img_content_link">
                                 <figure class="car_img_content">
-                                    <img src="https://img2.pic.in.th/pic/20cf5e809eb225b6c6dfe7333a34e36f.jpg" alt="Isuzu Dmax">
+                                    <img src="https://img2.pic.in.th/pic/f969fb4cb39103273167b80f1b6e2af1.jpg" alt="Toyota Vios">
                                 </figure>
                             </a>
                         </div>
                         <div>
-                            <p class="car_name">Isuzu</p>
+                            <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="dmax.html" class="car_model_link">
-                                    <h2 class="car_model" title="FOCUS">Dmax</h2>
+                                <a href="viosB.html" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Vios</h2>
                                 </a>
-                                <p class="car_price">900฿ <span class="car_price_time">/day</span></p>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
                             </div>
                         </div>
                     </div>
@@ -76,14 +76,14 @@
                             </li>
                             <li>
                                 <i class="fa-solid fa-gas-pump"></i>
-                                <span title="Kilometraje ilimitado">Diesel</span>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
                             </li>
                             <li>
                                 <i class="fas fa-user"></i>
                                 <span title="5">5</span>
                             </li>
                             <li>
-                                <a href="dmax.html">
+                                <a href="viosB.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
@@ -99,7 +99,7 @@
     <section id="pagination" class="section-p1">
         <a href="Car.html">1</a>
         <a href="Car1.html">2</a>
-        <a href="#"><i class="fa-solid fa-ellipsis"></i></a>
+        <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
     </section>
 
     <footer class="section-p1">
