--- a/Car.html
+++ b/Car.html
@@ -539,7 +539,7 @@
     <section id="pagination" class="section-p1">
         <a href="Car.html">1</a>
         <a href="Car1.html">2</a>
-        <a href="Car.html"><i class="fa-solid fa-ellipsis"></i></a>
+        <a href="Car.html"><i class="fa-solid fa-rotate-right"></i></a>
     </section>
 
     <footer class="section-p1">
