--- a/Car1.html
+++ b/Car1.html
@@ -92,6 +92,61 @@
                         </ul>
                     </div>
                 </article>
+                <article class="card_ui">
+                    <div class="car_header">
+                        <div class="car_header_status">
+                            <div class="status_disponibility status_available">
+                                <span>Disponible</span>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="button_like">
+                                <i class="far fa-heart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="car_body">
+                        <div class="car_body_img_container">
+                            <a href="viosB.html" class="car_img_content_link">
+                                <figure class="car_img_content">
+                                    <img src="https://img2.pic.in.th/pic/f969fb4cb39103273167b80f1b6e2af1.jpg" alt="Toyota Vios">
+                                </figure>
+                            </a>
+                        </div>
+                        <div>
+                            <p class="car_name">Toyota</p>
+                            <div class="car_price_container">
+                                <a href="viosB.html" class="car_model_link">
+                                    <h2 class="car_model" title="FOCUS">Vios</h2>
+                                </a>
+                                <p class="car_price">800฿ <span class="car_price_time">/day</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car_footer">
+                        <ul class="car_list_characteristics">
+                            <li>
+                                <i class="fa-solid fa-gears"></i>
+                                <span title="Manual">Manual</span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <span title="Kilometraje ilimitado">Gasohal 95</span>
+                            </li>
+                            <li>
+                                <i class="fas fa-user"></i>
+                                <span title="5">5</span>
+                            </li>
+                            <li>
+                                <a href="viosB.html">
+                                    <button class="rentbtn">
+                                        <p class="text">Go to book</p>
+                                    </button>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </article>
             </section>
         </div>
     </section>
