--- a/dmax.html
+++ b/dmax.html
@@ -36,10 +36,10 @@
                     <img src="https://img2.pic.in.th/pic/20cf5e809eb225b6c6dfe7333a34e36f.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/20cf5e809eb225b6c6dfe7333a34e36f.jpg" width="100%" class="small-img" alt="">
+                    <img src="https://img2.pic.in.th/pic/223463.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/20cf5e809eb225b6c6dfe7333a34e36f.jpg" width="100%" height="107px" class="small-img" alt="">
+                    <img src="https://img5.pic.in.th/file/secure-sv1/223462.jpg" width="100%" height="107px" class="small-img" alt="">
                 </div>
             </div>
         </div>
@@ -75,6 +75,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <!--<div class="small-img-group">
             <div class="small-img-col">
                 <img src="https://cdn.wheel-size.com/automobile/body/toyota-innova-2013-2015-1602846407.979837.jpg" width="100%" id="MainImg" alt="">
