--- a/celerio.html
+++ b/celerio.html
@@ -36,10 +36,10 @@
                     <img src="https://img2.pic.in.th/pic/4f231e38180382e8c8f9f7f9bdf297a8.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/4f231e38180382e8c8f9f7f9bdf297a8.jpg" width="100%" class="small-img" alt="">
+                    <img src="https://img5.pic.in.th/file/secure-sv1/223456.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/4f231e38180382e8c8f9f7f9bdf297a8.jpg" width="100%" height="107px" class="small-img" alt="">
+                    <img src="https://img5.pic.in.th/file/secure-sv1/223455.jpg" width="100%" height="107px" class="small-img" alt="">
                 </div>
             </div>
         </div>
@@ -75,6 +75,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <!--<div class="small-img-group">
             <div class="small-img-col">
                 <img src="https://cdn.wheel-size.com/automobile/body/toyota-innova-2013-2015-1602846407.979837.jpg" width="100%" id="MainImg" alt="">
