--- a/camry.html
+++ b/camry.html
@@ -36,10 +36,10 @@
                     <img src="https://img2.pic.in.th/pic/a3f37d081484f92dff36aa42796ce97d.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/a3f37d081484f92dff36aa42796ce97d.jpg" width="100%" class="small-img" alt="">
+                    <img src="https://img5.pic.in.th/file/secure-sv1/toyota-camry-hybrid_08.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/a3f37d081484f92dff36aa42796ce97d.jpg" width="100%" height="107px" class="small-img" alt="">
+                    <img src="https://img2.pic.in.th/pic/03082018112628-1-16.jpg" width="100%" height="107px" class="small-img" alt="">
                 </div>
             </div>
         </div>
@@ -75,6 +75,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <!--<div class="small-img-group">
             <div class="small-img-col">
                 <img src="https://cdn.wheel-size.com/automobile/body/toyota-innova-2013-2015-1602846407.979837.jpg" width="100%" id="MainImg" alt="">
