--- a/email.html
+++ b/email.html
@@ -22,11 +22,11 @@
                     <div class="columnPB">
                         <div class="inputbox">
                             <label>วันเริ่มต้น</label>
-                            <input type="datetime-local" id="Start">
+                            <input type="text" id="Start">
                         </div>
                         <div class="inputbox">
                             <label>วันสิ้นสุด</label>
-                            <input type="datetime-local" id="End">
+                            <input type="text" id="End">
                         </div>
                     </div>
                     <div class="place-box">
@@ -66,9 +66,9 @@
         
         Email.send({
             Host : "smtp.elasticemail.com",
-            Username : "34850@sksc.ac.th",
-            Password : "F10510E9FD1F0080CDEBC6457D0B93D3722C",
-            To : '34850@sksc.ac.th',
+            Username : "tapatauto9898@gmail.com",
+            Password : "55BC28BF3D6C84D03DA0EAC16D2532E03386",
+            To : 'tapatauto9898@gmail.com',
             From : Email,
             Subject : "รายการจองใหม่!",
             Body : messageEmail
