--- a/fortuner.html
+++ b/fortuner.html
@@ -36,10 +36,10 @@
                     <img src="https://img2.pic.in.th/pic/9d2ef0a927637d8ff68fb7cdcf1df802.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/9d2ef0a927637d8ff68fb7cdcf1df802.jpg" width="100%" class="small-img" alt="">
+                    <img src="https://img2.pic.in.th/pic/470c3eb7e4a5a77f1.jpg" width="100%" class="small-img" alt="">
                 </div>
                 <div class="small-img-col">
-                    <img src="https://img2.pic.in.th/pic/9d2ef0a927637d8ff68fb7cdcf1df802.jpg" width="100%" height="107px" class="small-img" alt="">
+                    <img src="https://img2.pic.in.th/pic/788eea8874de7d6e8.jpg" width="100%" height="107px" class="small-img" alt="">
                 </div>
             </div>
         </div>
@@ -75,6 +75,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <!--<div class="small-img-group">
             <div class="small-img-col">
                 <img src="https://cdn.wheel-size.com/automobile/body/toyota-innova-2013-2015-1602846407.979837.jpg" width="100%" id="MainImg" alt="">
